at least the mouse is working

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -23,6 +23,7 @@
 monitor=DP-2,1920x1080@144.00Hz,0x0,1
 monitor=DP-1,1920x1080@144.00Hz,-1920x0,1
 monitor=HDMI-A-1,1920x1080@74.99Hz,1920x0,1
+monitor=eDP-1,1920x1080@60.16Hz,0x0,1.25
 
 
 ###################
@@ -122,8 +123,8 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 3
+        size = 5
+        passes = 5
 
         vibrancy = 0.1
     }
@@ -311,3 +312,5 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 cursor:no_hardware_cursors=true
 # set wallpaper
 exec-once=hyprpaper
+# additional configuration based on system
+source=./hyprland-$(hostname).conf
