everything is working!

--- a/config/hypr/hyprpaper.conf
+++ b/config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/wallpapers/hypr.png
-wallpaper=,~/wallpapers/hypr.png
+preload = ~/.config/waypaper/wallpapers/hypr.png
+wallpaper=,~/.config/waypaper/wallpapers/hypr.png
