--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -55,9 +55,7 @@ $menu = wofi --show drun
 #############################
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
-
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,bibata-ice
 
 
 ###################
@@ -303,14 +301,11 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
-# Ignore maximize requests from apps. You'll probably like this.
+# Ignore maximize requests from apps. You`'ll probably like this.
 windowrule = suppressevent maximize, class:.*
-
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 # cursor broken
 cursor:no_hardware_cursors=true
 # set wallpaper
 exec-once=hyprpaper
-# additional configuration based on system
-source=./hyprland-$(hostname).conf
