added mouse theme properly

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -55,7 +55,7 @@ $menu = wofi --show drun
 #############################
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
-env = HYPRCURSOR_THEME,bibata-ice
+env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 
 
 ###################
