--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -21,7 +21,7 @@
 ### MONITORS ###
 ################
 monitor=DP-2,1920x1080@144.00Hz,0x0,1
-monitor=DP-1,1920x1080@144.00Hz,-1920x0,1
+monitor=DP-3,1920x1080@144.00Hz,-1920x0,1
 monitor=HDMI-A-1,1920x1080@74.99Hz,1920x0,1
 monitor=eDP-1,1920x1080@60.16Hz,0x0,1.25
 
@@ -56,7 +56,7 @@ $menu = wofi --show drun
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
-
+env = HYPRCURSOR_SIZE,25
 
 ###################
 ### PERMISSIONS ###
