hopefully the mouse works now

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -57,6 +57,8 @@ $menu = wofi --show drun
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 env = HYPRCURSOR_THEME,Bibata-Modern-Classic
 env = HYPRCURSOR_SIZE,25
+env = XCURSOR_THEME,Bibata-Modern-Classic
+env = XCURSOR_SIZE,25
 
 ###################
 ### PERMISSIONS ###
@@ -178,7 +180,6 @@ dwindle {
 master {
     new_status = master
 }
-
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
 }
@@ -309,3 +310,4 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 cursor:no_hardware_cursors=true
 # set wallpaper
 exec-once=hyprpaper
+exec-once = hyprctl setcursor Bibata-Modern-Classic 25
